--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.github.pizihao</groupId>
     <artifactId>Wormhole-RPC</artifactId>
-    <version>${core-version}</version>
+    <version>${Wormhole.version}</version>
     <packaging>pom</packaging>
     <name>Wormhole-RPC</name>
     <description>RPC</description>
@@ -18,7 +18,7 @@
     </modules>
     <properties>
         <java.version>1.8</java.version>
-        <core-version>0.0.1</core-version>
+        <Wormhole.version>0.0.1</Wormhole.version>
     </properties>
     <dependencies>
         <dependency>
