--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>Wormhole-server</module>
         <module>Wormhole-client</module>
         <module>Wormhole-register</module>
+        <module>Wormhole-register-adapter</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
