--- a/Wormhole-register-adapter/pom.xml
+++ b/Wormhole-register-adapter/pom.xml
@@ -6,15 +6,37 @@
     <parent>
         <groupId>io.github.pizihao</groupId>
         <artifactId>Wormhole-RPC</artifactId>
-        <version>0.0.1</version>
+        <version>${Wormhole.version}</version>
     </parent>
 
     <artifactId>Wormhole-register-adapter</artifactId>
-
+    <description>用于服务注册中心的适配器</description>
+    <version>${Wormhole.version}</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>Wormhole-nacos-adapter</module>
+    </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring-boot.version>2.2.13.RELEASE</spring-boot.version>
+        <nacos.version>2.1.0</nacos.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
