--- a/Wormhole-register-adapter/pom.xml
+++ b/Wormhole-register-adapter/pom.xml
@@ -21,7 +21,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.version>2.2.13.RELEASE</spring-boot.version>
-        <nacos.version>2.1.0</nacos.version>
+        <nacos.version>2.2.9.RELEASE</nacos.version>
     </properties>
 
     <dependencyManagement>
@@ -35,6 +35,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.pizihao</groupId>
+                <artifactId>Wormhole-register</artifactId>
+                <version>${Wormhole.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
