--- a/Wormhole-register-adapter-starter/Wormhole-nacos-adapter-starter/pom.xml
+++ b/Wormhole-register-adapter-starter/Wormhole-nacos-adapter-starter/pom.xml
@@ -4,13 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.github.pizihao</groupId>
-        <artifactId>Wormhole-register-adapter</artifactId>
+        <artifactId>Wormhole-register-adapter-starter</artifactId>
         <version>${Wormhole.version}</version>
     </parent>
-    <artifactId>Wormhole-nacos-adapter</artifactId>
+    <artifactId>Wormhole-nacos-adapter-starter</artifactId>
     <version>${Wormhole.version}</version>
-    <name>Wormhole-nacos-adapter</name>
-    <description>Wormhole-nacos-adapter</description>
+    <name>Wormhole-nacos-adapter-starter</name>
+    <description>Wormhole-nacos-adapter-starter</description>
     <properties>
         <java.version>8</java.version>
     </properties>
@@ -22,6 +22,15 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.alibaba.cloud/spring-cloud-starter-alibaba-nacos-discovery -->
