feat : 定义客户端和服务器端的通道接口，并提供部分方法

--- a/Wormhole-client/pom.xml
+++ b/Wormhole-client/pom.xml
@@ -10,6 +10,11 @@
     <name>Wormhole-client</name>
     <dependencies>
         <dependency>
+            <groupId>io.github.pizihao</groupId>
+            <artifactId>Wormhole-core</artifactId>
+            <version>${Wormhole.version}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
