--- a/Wormhole-server/pom.xml
+++ b/Wormhole-server/pom.xml
@@ -9,6 +9,12 @@
     <artifactId>Wormhole-server</artifactId>
     <name>Wormhole-server</name>
     <dependencies>
+
+        <dependency>
+            <groupId>io.github.pizihao</groupId>
+            <artifactId>Wormhole-core</artifactId>
+            <version>${Wormhole.version}</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
